[package]
name = "Restro_Keyboard"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "2.1"

[package.metadata.winres]
LegalCopyright = "Copyright © 2025"
manifest = "manifest.xml"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi"
] }
eframe = "0.27.2"
egui = "0.27.2"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.1"
lazy_static = "1.5.0"
ctrlc = "3.4.4"
tray-item = "0.10.0"
